5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1573_1333.log
== TEST (2019-03-13 13:53:25) 
-- CODE:
 
print(expressao30 – 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 2
    print(expressao30 – 3 ** 2 + 8 // 3 ** 2 * 10)
                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:53:53) 
-- CODE:
 
print(expressao30 – 30 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 2
    print(expressao30 – 30 ** 2 + 8 // 3 ** 2 * 10)
                      ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:54:55) 
-- CODE:
expressao30 – 30-3 ** 2 + 8 // 3 ** 2 * 10	
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao30 – 30-3 ** 2 + 8 // 3 ** 2 * 10	
                ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:55:16) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10	
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:55:18) 
-- CODE:
expressao = 30-3 ** 2 + 8 // 3 ** 2 * 10	
print(expressao)
-- EXECUTION TIME:
0.185299
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
